# calibcam

./: .gitignore  LICENSE  README.md  ccv.py  environment.yml  output.txt  pyproject.toml  reinstall.sh  requirements.txt  sample_config.yml  setup.py
.github/workflows/: unittest.yml
boards/: bboboard-v1.npy  bboboard-v2.npy  bboboard-v3.npy  bboboard-v4.npy  board_5x7_0.29500x0.41300.npy
calibcam/: __init__.py  __main__.py  autograd_func.py  board.py  calibrate_from_ccv.py  calibrator.py  calibrator_opts.py  camcalibrator.py  camfunctions.py  camfunctions_ag.py  camfunctions_autograd.py  compatibility.py  detection.py  environment.yml  exceptions.py  gui.py  helper.py  helper_ag.py  helper_autograd.py  multical_func.py  multical_func_ccv.py  multical_plot.py  multical_plot_ccv.py  optfunctions_jacfwd.py  optfunctions_vmapgrad.py  optfunctions_vmapgrad_ag.py  optimization.py  optimization_autograd.py  pose_estimation.py  single_camcalibration.py  yaml_helper.py
calibcam/gui/: gui.py  multical_plot.py
calibcam/opt_jacfwd/: optfunctions.py  optfunctions_ag.py
calibcam/opt_vmapgrad/: optfunctions.py  optfunctions_ag.py
calibcam/repro/: optfunctions.py  optfunctions_ag.py
examples/: board.py
test/: plot_detection.py  test_detection.py
test/sample_images_1/: detections.yml
test/sample_images_2/: detections.yml
